ccache news
===========


Unreleased
----------

Bug fixes
~~~~~~~~~

- Made hash of cached result created with and without `CCACHE_CPP2` different.
  This makes it possible to rebuild with `CCACHE_CPP2` set without having to
  clear the cache to get new results.


ccache 3.1.10
-------------
Release date: 2014-10-19


New features and improvements
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Added support for the `-Xclang` compiler option.

- Improved handling of exit code of internally executed processes.

- Zero length object files in the cache are now rejected as invalid.

- Bail out on option `-gsplit-dwarf` (since it produces multiple output files).

- Compiler option `-fdebug-prefix-map` is now ignored (not part of the hash).
  (The `-fdebug-prefix-map` option may be used in combination with
  `CCACHE_BASEDIR` to reuse results across different directories.)

- Added note in documentation that `--ccache-skip` currently does not mean
  ``don't hash the following option''.

- To enable support for precompiled headers (PCH), `CCACHE_SLOPPINESS` now also
  needs to include the new `pch_defines` sloppiness. This is because ccache
  can't detect changes in the source code when only defined macros have been
  changed.

- Stale files in the internal temporary directory (`<ccache_dir>/tmp`) are now
  cleaned up if they are older than one hour.


Bug fixes
~~~~~~~~~

- Fixed path canonicalization in `make_relative_path()` when path doesn't
  exist.

- Fixed bug in `common_dir_prefix_length()`. This corrects the `CCACHE_BASEDIR`
  behavior.

- ccache no longer tries to create the cache directory when `CCACHE_DISABLE` is
  set.

- Fixed bug when reading manifests with a very large number of file info
  entries.

- Fixed problem with logging of current working directory.


ccache 3.1.9
------------
Release date: 2013-01-06


Bug fixes
~~~~~~~~~

- The EAGAIN signal is now handled correctly when emitting cached stderr