@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2009-2010, 2012 Joel Rosdahl
+ * Copyright (C) 2009-2015 Joel Rosdahl
  *
  * This program is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License as published by the Free
@@ -18,6 +18,7 @@
 
 #include "ccache.h"
 #include "hashutil.h"
+#include "macroskip.h"
 #include "murmurhashneutral2.h"
 
 unsigned
@@ -56,6 +57,59 @@ file_hashes_equal(struct file_hash *fh1, struct file_hash *fh2)
 	} while (0)
 
 /*
+ * Search for the strings "__DATE__" and "__TIME__" in str.
+ *
+ * Returns a bitmask with HASH_SOURCE_CODE_FOUND_DATE and
+ * HASH_SOURCE_CODE_FOUND_TIME set appropriately.
+ */
+int
+check_for_temporal_macros(const char *str, size_t len)
+{
+	int result = 0;
+
+	/*
+	 * We're using the Boyer-Moore-Horspool algorithm, which searches starting
+	 * from the *end* of the needle. Our needles are 8 characters long, so i
+	 * starts at 7.
+	 */
+	size_t i = 7;
+
+	while (i < len) {
+		/*
+		 * Check whether the substring ending at str[i] has the form "__...E__". On
+		 * the assumption that 'E' is less common in source than '_', we check
+		 * str[i-2] first.
+		 */
+		if (str[i - 2] == 'E' &&
+		    str[i - 0] == '_' &&
+		    str[i - 7] == '_' &&
+		    str[i - 1] == '_' &&
+		    str[i - 6] == '_') {
+			/*
+			 * Check the remaining characters to see if the substring is "__DATE__"
+			 * or "__TIME__".
+			 */
+			if (str[i - 5] == 'D' && str[i - 4] == 'A' &&
+			    str[i - 3] == 'T') {
+				result |= HASH_SOURCE_CODE_FOUND_DATE;
+			}
+			else if (str[i - 5] == 'T' && str[i - 4] == 'I' &&
+			         str[i - 3] == 'M') {
+				result |= HASH_SOURCE_CODE_FOUND_TIME;
+			}
+		}
+
+		/*
+		 * macro_skip tells us how far we can skip forward upon seeing str[i] at
+		 * the end of a substring.
+		 */
+		i += macro_skip[(uint8_t)str[i]];
+	}
+
+	return result;
+}
+
+/*
  * Hash a string ignoring comments. Returns a bitmask of HASH_SOURCE_CODE_*
  * results.
  */
@@ -63,117 +117,22 @@ int
 hash_source_code_string(
 	struct mdfour *hash, const char *str, size_t len, const char *path)
 {
-	const char *p;
-	const char *end;
-	char hashbuf[64];
-	size_t hashbuflen = 0;
 	int result = HASH_SOURCE_CODE_OK;
 	extern unsigned sloppiness;
-	bool seen_backslash;
 
-	p = str;
-	end = str + len;
-	while (1) {
-		if (p >= end) {
-			goto end;
-		}
-		switch (*p) {
-		/* Potential start of comment. */
-		case '/':
-			if (p+1 == end) {
-				break;
-			}
-			switch (*(p+1)) {
-			case '*':
-				HASH(' '); /* Don't paste tokens together when removing the comment. */
-				p += 2;
-				while (p+1 < end && (*p != '*' || *(p+1) != '/')) {
-					if (*p == '\n') {
-						/* Keep line numbers. */
-						HASH('\n');
-					}
-					p++;
-				}
-				if (p+1 == end) {
-					goto end;
-				}
-				p += 2;
-				continue;
-
-			case '/':
-				p += 2;
-				while (p < end && (*p != '\n' || *(p-1) == '\\')) {
-					p++;
-				}
-				continue;
-
-			default:
-				break;
-			}
-			break;
-
-		/* Start of string. */
-		case '"':
-			HASH(*p);
-			p++;
-			seen_backslash = false;
-			while (p < end) {
-				if (seen_backslash) {
-					seen_backslash = false;
-				} else if (*p == '"') {
-					/* Found end of string. */
-					HASH(*p);
-					p++;
-					break;
-				} else if (*p == '\\') {
-					seen_backslash = true;
-				}
-				HASH(*p);
-				p++;
-			}
-			if (p == end) {
-				goto end;
-			}
-			break;
-
-		/* Potential start of volatile macro. */
-		case '_':
-			if (p + 7 < end
-			    && p[1] == '_' && p[5] == 'E'
-			    && p[6] == '_' && p[7] == '_') {
-				if (p[2] == 'D' && p[3] == 'A'
-				    && p[4] == 'T') {
-					result |= HASH_SOURCE_CODE_FOUND_DATE;
-				} else if (p[2] == 'T' && p[3] == 'I'
-				           && p[4] == 'M') {
-					result |= HASH_SOURCE_CODE_FOUND_TIME;
-				}
-				/*
-				 * Of course, we can't be sure that we have found a __{DATE,TIME}__
-				 * that's actually used, but better safe than sorry. And if you do
-				 * something like
-				 *
-				 * #define TIME __TI ## ME__
-				 *
-				 * in your code, you deserve to get a false cache hit.
-				 */
-			}
-			break;
-
-		default:
-			break;
-		}
-
-		HASH(*p);
-		p++;
+	/*
+	 * Check for __DATE__ and __TIME__ if the sloppiness configuration tells us
+	 * we should.
+	 */
+	if (!(sloppiness & SLOPPY_TIME_MACROS)) {
+		result |= check_for_temporal_macros(str, len);
 	}
 
-end:
-	hash_buffer(hash, hashbuf, hashbuflen);
+	/*
+	 * Hash the source string.
+	 */
+	hash_buffer(hash, str, len);
 
-	if (sloppiness & SLOPPY_TIME_MACROS) {
-		return 0;
-	}
 	if (result & HASH_SOURCE_CODE_FOUND_DATE) {
 		/*
 		 * Make sure that the hash sum changes if the (potential) expansion of
