@@ -20,6 +20,7 @@ int file_hashes_equal(struct file_hash *fh1, struct file_hash *fh2);
 #define	HASH_SOURCE_CODE_FOUND_DATE 2
 #define	HASH_SOURCE_CODE_FOUND_TIME 4
 
+int check_for_temporal_macros(const char *str, size_t len);
 int hash_source_code_string(
 	struct mdfour *hash, const char *str, size_t len, const char *path);
 int hash_source_code_file(struct mdfour *hash, const char *path);
